tests/pos/i12897/A.scala

package TestFoo
extension (text : String) def foo(defaultArg : Boolean = true) : String = ""

//def foo(text : String) (defaultArg : Boolean = true) : String = ""
