tests/neg/toplevel-overload-1/moredefs_1.scala
package top

def hello(b: Boolean): String = if (b) "yes" else "no"

